<resources>
    <string name="app_name">Kitchen Buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kitchen_buddy">Kitchen Buddy</string>
    <string name="get_started">Get Started</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="i_agree_to_the_processing_of">I agree to the processing of</string>
    <string name="personal_data">Personal data</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="meal_of_the_day">Meal of the day</string>
    <string name="most_popular_meals">Most Popular Meals</string>
    <string name="categories">Categories</string>
    <string name="welcome">Welcome</string>
    <string name="meal_image_desc">meal_image_desc</string>
    <string name="welcome_to_kitchen_buddy">Welcome to Kitchen Buddy! With our app, you can easily plan your weekly meals, explore a variety of categories, and get suggestions for new dishes. Save your favorite meals and enjoy access to them even without an internet connection.</string>
    <string name="name">Name:</string>
    <string name="country">Countries</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="ingredients">Ingredients:</string>
    <string name="steps">Steps:</string>
    <string name="login_as_a_guest">Login as a guest</string>
    <string name="video_to_show_steps">Video to show steps:</string>
    <string name="home">Home</string>
    <string name="my_profile">My profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="profile_picture">profile picture</string>
    <string name="add_to_my_plan">Add to my plan</string>
    <string name="search_hint">search hint</string>
    <string name="search_by">Search by</string>
    <string name="by_country">By Country</string>
    <string name="by_ingredient">By Ingredient</string>
    <string name="by_category">By Category</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="default_web_client_id">348930496442-tui1g0oiv3riaca7fkl8el5tq25et34j.apps.googleusercontent.com</string>
    <string name="my_favorite">My favorite</string>
    <string name="my_plan">My plan</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="change_language">Change Language</string>
    <string name="share_app">Share App</string>
    <string name="contact_support">Contact Support</string>

</resources>