<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignUpActivity">

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- Back Button -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="18dp"
        android:visibility="invisible"
        android:contentDescription="Back"
        android:src="@drawable/round_keyboard_double_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />






    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        style="@style/textGetStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="36dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Full Name Input -->
    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cfsabinettademo"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_email"
        android:fontFamily="@font/cfsabinettademo"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFullName" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_password"
        android:fontFamily="@font/cfsabinettademo"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <!-- Checkbox -->
    <CheckBox
        android:id="@+id/cbAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cfsabinettademo"
        android:text="@string/i_agree_to_the_processing_of"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <!-- Personal Data Link -->
    <TextView
        android:id="@+id/tvPersonalData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_data"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/cfsabinettademo"
        android:textColor="#131842"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cbAgree"
        app:layout_constraintStart_toEndOf="@id/cbAgree"
        app:layout_constraintTop_toTopOf="@+id/cbAgree" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        style="@style/GeneralButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbAgree" />


    <!-- Social Media Signup -->
    <TextView
        android:id="@+id/tvSignupWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up_with"
        android:fontFamily="@font/cfsabinettademo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

    <!-- Social Media Icons -->
    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignupWith">

        <!-- Facebook Icon -->
        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="Facebook"
            android:src="@drawable/google_icon" />

        <!-- Space -->
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <!-- Twitter Icon -->
        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="Twitter"
            android:src="@drawable/twitter_icon" />

        <!-- Space -->
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <!-- Google Icon -->
        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="Google"
            android:src="@drawable/facebook_icon" />

        <!-- Space -->
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <!-- Apple Icon -->
        <ImageView
            android:id="@+id/github_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="github"
            android:src="@drawable/github_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account"
        android:fontFamily="@font/cfsabinettademo"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/l2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/signInClickabletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:fontFamily="@font/cfsabinettademo"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvSignIn"
        app:layout_constraintTop_toTopOf="@+id/tvSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>
