<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signin.SignInActivity">
    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- Back Button -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="18dp"
        android:visibility="invisible"
        android:contentDescription="Back"
        android:src="@drawable/round_keyboard_double_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />






        <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        style="@style/textGetStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

        <!-- Email Input -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/cfsabinettademo"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/cfsabinettademo"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <!-- Sign In Button -->
    <Button
        android:id="@+id/btnSignIn"
        style="@style/GeneralButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />
    <!-- Sign in with Text -->
    <TextView
        android:id="@+id/tvSigninWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cfsabinettademo"
        android:text="@string/sign_in_with"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

    <!-- Social Media Icons -->
    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSigninWith">

        <!-- Facebook Icon -->
        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="Facebook"
            android:src="@drawable/google_icon" />

        <!-- Space -->
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <!-- Twitter Icon -->
        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="Twitter"
            android:src="@drawable/twitter_icon" />

        <!-- Space -->
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <!-- Google Icon -->
        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="Google"
            android:src="@drawable/facebook_icon" />

        <!-- Space -->
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <!-- Apple Icon -->
        <ImageView
            android:id="@+id/github_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="github"
            android:src="@drawable/github_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cfsabinettademo"
        android:text="@string/do_not_have_an_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l2" />

    <TextView
        android:id="@+id/signInClickabletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/cfsabinettademo"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvSignIn"
        app:layout_constraintTop_toTopOf="@+id/tvSignIn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
